# semantic-explorer

./: .dockerignore  .gitignore  ACTION_PLAN.md  ARCHITECTURE.md  AUTHORIZATION_AUDIT.md  CHUNKING_GUIDE.md  CLUSTERING_FIX.md  CLUSTERING_INVESTIGATION.md  Cargo.toml  IMPROVEMENTS.md  K8S.md  PLAN.md  QUICK_REFERENCE.md  README.md  README_old.md  REFACTOR.md  TASK_TRACKER.md  TODOs.md  VISUALIZATION_FIX_PLAN.md  cargo_cuda.sh  package-lock.json  semantic-explorer-1.1.0.tgz  setup_cuda.sh
crates/api/: .env  .env.example  CODE_REVIEW.md  Cargo.toml  Dockerfile  README.md
crates/api/src/: audit.rs  audit_worker.rs  errors.rs  main.rs  middleware.rs
crates/api/src/api/: chat.rs  collection_transforms.rs  collections.rs  dataset_transforms.rs  datasets.rs  embedded_datasets.rs  embedders.rs  embedding_inference.rs  health.rs  inference.rs  llm_inference.rs  llms.rs  marketplace.rs  mod.rs  search.rs  sessions.rs  status.rs  transforms.rs  visualization_transforms.rs  visualizations.rs
crates/api/src/auth/: device_flow.rs  mod.rs  oidc.rs  openid.rs  openid_middleware.rs  session_manager.rs
crates/api/src/chat/: llm.rs  mod.rs  models.rs  prompt_injection.rs  rag.rs
crates/api/src/collections/: models.rs
crates/api/src/datasets/: models.rs
crates/api/src/embedded_datasets/: models.rs
crates/api/src/embedders/: models.rs
crates/api/src/embedding/: mod.rs
crates/api/src/llms/: client.rs  models.rs
crates/api/src/middleware/: idempotency.rs  mod.rs  rate_limit.rs  session_activity.rs
crates/api/src/observability/: mod.rs  valkey_metrics.rs
crates/api/src/providers/: metadata.rs
crates/api/src/search/: mod.rs  models.rs
crates/api/src/storage/: mod.rs  valkey.rs
crates/api/src/storage/postgres/: audit.rs  auth.rs  chat.rs  collection_transforms.rs  collections.rs  dataset_transform_batches.rs  dataset_transform_pending_batches.rs  dataset_transform_stats.rs  dataset_transforms.rs  datasets.rs  embedded_datasets.rs  embedders.rs  llms.rs  mod.rs  rls.rs  sessions.rs  transforms.rs  visualization_transforms.rs
crates/api/src/storage/postgres/migrations/: 1_base_schema.sql  1_complete_schema.sql  1_tables.sql  1_unified_base_schema.sql  20260107_create_chat_tables.sql  (+29 more)
crates/api/src/storage/qdrant/: mod.rs  quantization.rs
crates/api/src/storage/rustfs/: mod.rs
crates/api/src/storage/s3/: mod.rs  models.rs
crates/api/src/transforms/: listeners.rs  mod.rs  models.rs  scanner.rs  trigger.rs
crates/api/src/transforms/collection/: listener.rs  mod.rs  models.rs  scanner.rs
crates/api/src/transforms/dataset/: listener.rs  mod.rs  models.rs  reconciliation.rs  scanner.rs
crates/api/src/transforms/visualization/: listener.rs  mod.rs  models.rs  scanner.rs
crates/api/src/validation/: file_upload.rs  mod.rs
crates/api/src/visualizations/: models.rs
crates/core/: CODE_REVIEW.md  Cargo.toml  README.md
crates/core/src/: adaptive_concurrency.rs  caching.rs  circuit_breaker.rs  config.rs  embedder.rs  encryption.rs  http_client.rs  jobs.rs  lib.rs  llm.rs  load_test.rs  models.rs  nats.rs  observability.rs  owner_info.rs  profiling.rs  retry.rs  secrets.rs  storage.rs  subjects.rs  tls.rs  validation.rs  worker.rs
crates/core/src/observability/: database.rs  gpu.rs  inference.rs  mod.rs  nats.rs  pipeline.rs  scanner.rs  search.rs  storage.rs  valkey.rs  worker.rs
crates/embedding-inference-api/: .env  .env.example  Cargo.toml  Dockerfile  README.md  download_models.sh  run_with_cuda.sh  test.http
crates/embedding-inference-api/src/: config.rs  embedding.rs  errors.rs  main.rs  model_preload.rs  models.rs  observability.rs  reranker.rs
crates/embedding-inference-api/src/api/: embedding.rs  health.rs  reranking.rs
crates/llm-inference-api/: .env  .env.example  Cargo.toml  Dockerfile  QUANTIZATION.md  README.md  test.http
crates/llm-inference-api/src/: config.rs  errors.rs  llm.rs  main.rs  model_preload.rs  models.rs  observability.rs
crates/llm-inference-api/src/api/: chat.rs  completions.rs  generation.rs  health.rs  mod.rs  streaming.rs
crates/worker-collections/: .env  .env.example  CODE_REVIEW.md  Cargo.toml  Dockerfile  README.md
crates/worker-collections/src/: chunk.rs  job.rs  main.rs
crates/worker-collections/src/chunk/: config.rs  metadata.rs  mod.rs  service.rs
crates/worker-collections/src/chunk/strategies/: code_aware.rs  fixed_size.rs  markdown_aware.rs  mod.rs  overlap.rs  recursive_character.rs  semantic.rs  sentence.rs  table_aware.rs  token_based.rs
crates/worker-collections/src/extract/: config.rs  error.rs  mod.rs  service.rs
crates/worker-collections/src/extract/archive/: mod.rs
crates/worker-collections/src/extract/email/: mod.rs
crates/worker-collections/src/extract/epub/: mod.rs
crates/worker-collections/src/extract/html/: mod.rs
crates/worker-collections/src/extract/json/: mod.rs
crates/worker-collections/src/extract/legacy_doc/: mod.rs
crates/worker-collections/src/extract/legacy_ppt/: mod.rs
crates/worker-collections/src/extract/legacy_xls/: mod.rs
crates/worker-collections/src/extract/log/: mod.rs
crates/worker-collections/src/extract/markdown/: mod.rs
crates/worker-collections/src/extract/office/: document.rs  mod.rs  presentation.rs  spreadsheet.rs
crates/worker-collections/src/extract/open_office/: mod.rs  open_document.rs  open_presentation.rs  open_spreadsheet.rs
crates/worker-collections/src/extract/pdf/: mod.rs
crates/worker-collections/src/extract/plain_text/: mod.rs
crates/worker-collections/src/extract/rtf/: mod.rs
crates/worker-collections/src/extract/strategies/: plain_text.rs
crates/worker-collections/src/extract/xml/: mod.rs
crates/worker-datasets/: .env  .env.example  CODE_REVIEW.md  Cargo.toml  Dockerfile  README.md
crates/worker-datasets/src/: embedder.rs  job.rs  main.rs  qdrant_cache.rs
crates/worker-visualizations/: Cargo.toml  Dockerfile  README.md  activate_build_env.sh  build.rs  setup_build.sh
crates/worker-visualizations/.scripts/: activate_build_env.sh  setup_build.sh
crates/worker-visualizations/src/: job.rs  main.rs  topic_naming.rs
(+282 files in other folders)
