[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/embedding-inference-api",
    "crates/llm-inference-api",
    "crates/worker-collections",
    "crates/worker-datasets"
]

[workspace.dependencies]
actix-web = { version = "4.12.1", features = ["actix-tls", "rustls-0_23"]}
actix-cors = { version = "0.7.1" }
actix-multipart = { version = "0.7.2" }
thiserror = { version = "2.0.18" }
actix-files = {version = "0.6.9", features = ["actix-server"]}
actix_web_openidconnect = { version = "0.3.2"}
actix-web-prom = {version = "0.10.0", features = ["process"]}
async-nats = { version = "0.46.0" }
async-stream = { version = "0.3.6" }
futures-util = { version = "0.3.31" }
aws-sdk-s3 = {version = "1.120.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.12", features = ["rustls", "behavior-version-latest"] }
qdrant-client = { version = "1.16.0"}
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "time", "migrate", "macros", "json"], default-features = false }
utoipa = { version = "5.4.0", features = ["actix_extras", "auto_into_responses"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "reqwest", "vendored"]}
utoipa-actix-web = { version = "0.1.2"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
anyhow = { version = "1.0.100" }
dotenvy = { version = "0.15.7"}
tracing = { version = "0.1.43"}
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"]}
opentelemetry = { version = "0.31.0"}
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "opentelemetry-http"]}
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-prometheus = { version = "0.31.0" }
opentelemetry-appender-tracing = { version = "0.31.1" }
tracing-opentelemetry = { version = "0.32.1" }
prometheus = { version = "0.14.0" }
mime_guess = { version = "2.0.5" }
quick-xml = {version = "0.39.0", features = ["escape-html"]}
mime = { version = "0.3.17" }
pdf-extract = { version = "0.10.0" }
lopdf = { version = "0.39.0" }
unicode-normalization = { version = "0.1.25" }
unicode-segmentation = { version = "1.12.0" }
scraper = { version = "0.25.0" }
zip = {version = "7.2.0", features = ["deflate", "deflate64", "time", "ppmd", "bzip2"], default-features = false}
uuid = { version = "1.20.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "rustls"], default-features = false }
rust-stemmers = {version ="1.2.0" }
stop-words = { version = "0.9.0" }
async-trait = { version = "0.1.89" }
once_cell = "1.21.3"
regex = { version = "1.12.2" }
aes-gcm = { version = "0.10.3" }
rand = { version = "0.9.2" }
base64 = { version = "0.22.1" }
hex = { version = "0.4.3" }
infer = { version = "0.19.0" }
rustls = { version = "0.23.36" }
pem = { version = "3.0.6" }
sha2 = {version = "0.10.9"}
tiktoken-rs = { version = "0.9.1" }
flate2 = { version = "1.1.8" }
tar = { version = "0.4.44" }
mail-parser = { version = "0.11.1" }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "tiff", "bmp", "webp"] }
rtf-parser = { version = "0.4.2" }
epub = { version = "2.1.5" }
cfb = { version = "0.12.1" }
tree-sitter = { version = "0.26.3" }
tree-sitter-rust = { version = "0.24.0" }
tree-sitter-python = { version = "0.25.0" }
tree-sitter-javascript = { version = "0.25.0" }
tree-sitter-typescript = { version = "0.23.2" }
tree-sitter-go = { version = "0.25.0" }
tree-sitter-java = { version = "0.23.5" }
tree-sitter-c = { version = "0.24.1" }
tree-sitter-cpp = { version = "0.23.4" }
tree-sitter-json = { version = "0.24.8" }
tree-sitter-toml-ng = { version = "0.7.0" }
tree-sitter-yaml = { version = "0.7.2" }
tree-sitter-html = { version = "0.23.2" }
tree-sitter-css = { version = "0.25.0" }
tree-sitter-bash = { version = "0.25.1" }


semantic-explorer-core = { path = "crates/core" }

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true


# Force rebuild
