[package]
name = "semantic-explorer-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
opentelemetry = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
actix-web-prom = { workspace = true }
opentelemetry-prometheus = { workspace = true }
utoipa = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rustls = { workspace = true }
pem = { workspace = true }
nvml-wrapper = "0.11.0"