[package]
name = "semantic-explorer-core"
version = "0.1.0"
edition = "2024"

# Note: This crate uses explicit versions instead of workspace inheritance
# because llm-inference-api (excluded from workspace) depends on it and
# needs it to be self-contained for Docker builds.

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
aws-sdk-s3 = { version = "1.121.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.12", features = ["rustls", "behavior-version-latest"] }
tracing = "0.1.43"
uuid = { version = "1.20.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
opentelemetry = "0.31.0"
async-nats = "0.46.0"
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "opentelemetry-http"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = "0.31.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32.1"
reqwest = { version = "0.13.1", features = ["json", "rustls"], default-features = false }
once_cell = "1.21.3"
actix-web-prom = { version = "0.10.0", features = ["process"] }
opentelemetry-prometheus = "0.31.0"
utoipa = { version = "5.4.0", features = ["actix_extras", "auto_into_responses"] }
aes-gcm = "0.10.3"
rand = "0.9.2"
base64 = "0.22.1"
hex = "0.4.3"
rustls = "0.23.36"
pem = "3.0.6"
nvml-wrapper = "0.11.0"