[package]
name = "worker-collections"
version = "0.1.0"
edition = "2024"

[dependencies]
semantic-explorer-core = { path = "../core" }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
aws-sdk-s3 = { workspace = true }
mime_guess = { workspace = true }
pdf-extract = { workspace = true }
unicode-segmentation = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }
scraper = { workspace = true }
mime = { workspace = true }
unicode-normalization = { workspace = true }
reqwest = { workspace = true }
