[package]
name = "worker-collections"
version = "0.1.0"
edition = "2024"

[dependencies]
semantic-explorer-core = { path = "../core" }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
aws-sdk-s3 = { workspace = true }
mime_guess = { workspace = true }
pdf-extract = { workspace = true }
lopdf = { workspace = true }
unicode-segmentation = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }
scraper = { workspace = true }
mime = { workspace = true }
unicode-normalization = { workspace = true }
reqwest = { workspace = true }
tiktoken-rs = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
mail-parser = { workspace = true }
regex = { workspace = true }

# Legacy format parsing
rtf-parser = { workspace = true }
epub = { workspace = true }
cfb = { workspace = true }

# Tree-sitter for code-aware chunking
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-bash = { workspace = true }
