[package]
name = "worker-visualizations"
version = "0.1.0"
edition = "2021"

[dependencies]
cuml-wrapper-rs = { version = "0.3.1" }
rust-stemmers = "1.2"
stop-words = "0.8"
futures-util = "0.3"
semantic-explorer-core = { path = "../core" }
async-nats = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
qdrant-client = { workspace = true }
unicode-segmentation = { workspace = true }